--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ pandas>=2.0.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
 catboost>=1.2.0
+xgboost>=3.0.0
+lightgbm>=4.0.0
+imbalanced-learn>=0.14.0
 
 # API
 fastapi>=0.104.0
